security/policies/kyverno/disallow-privileged.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-privileged
  annotations:
    policies.kyverno.io/title: Disallow privileged / host namespaces
    policies.kyverno.io/severity: critical
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: no-privileged-no-host
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - demo-dev
      validate:
        message: "privileged, hostNetwork, hostPID, hostIPC are forbidden"
        pattern:
          spec:
            =(hostNetwork): false
            =(hostPID): false
            =(hostIPC): false
            containers:
              - =(securityContext):
                  =(privileged): false
