security/policies/kyverno/restrict-registry.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-image-registry
  annotations:
    policies.kyverno.io/title: Allow only lab registry images
    policies.kyverno.io/severity: high
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: registry-allowlist
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - demo-dev
      validate:
        message: "Images must come from localhost:5000/ (lab registry allowlist)"
        pattern:
          spec:
            containers:
              - image: "localhost:5000/*"
